[tool.poetry]
name = "netscanner"
version = "0.0.1"
description = "A comprehensive network reconnaissance tool"
authors = ["Adam Dawood <ADD0242@MY.LONDONMET.AC.UK>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
